# eth-whisperer

./: .gitignore  README  create kafka to feature store service  next steps  pyrightconfig.json
docker-compose/: Makefile  feature_pipeline.yml  redpanda.yml
services/kafka_to_feature_store/: Dockerfile  Makefile  pyproject.toml
services/kafka_to_feature_store/src/: feature_store_config.py  hopsworks_api.py  main.py
services/trade_producer/: Dockerfile  Makefile  pyproject.toml  sample.env
services/trade_producer/src/: config.py  kraken_api.py  main.py  producer_config.py
services/trade_producer/src/kraken_api/: kraken_rest.py  websocket.py
services/trade_to_ohlc/: Dockerfile  Makefile  dockerize trade_to_ohlc service  pyproject.toml
services/trade_to_ohlc/src/: main.py  ohlc_config.py
