[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["faceyacc <justfacey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
ruff = "^0.4.9"
quixstreams = "^2.5.1"
loguru = "^0.7.2"
pydantic-settings = "^2.3.3"
python-dotenv = "^1.0.1"
hopsworks = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]
